updated a couple of fixes

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
                     <h2>Travel</h2>
                     <div class='row'>
                         <div class='col s12'>
+                            <p>Details about the travel-reimbursmenents process
+                            can be found are <a
+                     href="travel-reimbursements.html">here</a>.</p>
+                            <p>Form used for travel reimbursement can be found <a
+                     href="https://hacknc.typeform.com/to/VEoFv1">here</a>.</p>
                             <h4>Parking</h4>
                             <p>Free parking is available over the weekend everywhere on campus, but we recommend the following decks:</p>
                             <ul>
