--- a/travel-reimbursements.html
+++ b/travel-reimbursements.html
@@ -31,8 +31,8 @@
             <h2>Travel Reimbusements, How do They Work?</h2>
 
             TL;DR -- We have a lot of money and would love for you all to come!
-            You will almost definitely be reimbursed if you got accepted, shows
-            up, and presents! That being said, <b>you must present to be
+            You will almost definitely be reimbursed if you got accepted, show
+            up, and present! That being said, <b>you must present to be
                 reimbursed.</b>
 
             <h3>Carpool Grants</h3>
