Add GE to sponsors

--- a/index.html
+++ b/index.html
@@ -349,15 +349,19 @@
                         </div>
                     </div>
                     <div class="row sponsor-row">
-                        <div class="col m12 l4 center">
+                        <div class="col m12 l3 center">
                             <a href='https://www.sas.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/sas.png'></a>
                         </div>
-                        <div class="col m12 l4 center">
+                        <div class="col m12 l3 center">
                             <a href='https://www.credit-suisse.com/'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/creditsuisse.png'></a>
                         </div>
-                        <div class="col m12 l4 center">
+                        <div class="col m12 l3 center">
+                            <a href='https://www.ge.com/'>
+                                <img class='sponsor-image tier-1' src='static/assets/images/sponsors/ge.png'></a>
+                        </div>
+                        <div class="col m12 l3 center">
                             <a href='https://www.wolfram.com//'>
                                 <img class='sponsor-image tier-1' src='static/assets/images/sponsors/wolfram.png'></a>
                         </div>
