Update ConsenSys prize, add CS+SG sponsor

--- a/index.html
+++ b/index.html
@@ -367,9 +367,13 @@
                         </div>
                     </div>
                     <div class="row sponsor-row">
-                        <div class="col m12 l6 offset-l3 center">
+                        <div class="col m12 l6 center">
                             <a href='https://cs.unc.edu/'>
                                 <img class='sponsor-image tier-3' src='static/assets/images/sponsors/unc-cs.png'></a>
+                        </div>
+                        <div class="col m12 l6 center">
+                            <a href='https://unc-cssg.org/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/cssgunc.png'></a>
                         </div>
                     </div>
                     <p class="center">Looking to sponsor HackNC? Email us at <a class="sponsor-email"
@@ -464,9 +468,9 @@
                         <div class='col m12 l4 center'>
                             <div class='card dark'>
                                 <div class='card-content'>
-                                    <h5>HackNC</h5>
-                                    <p><u>More to be announced</u></p>
-                                    <p>Stay tuned for our Devpost event</p>
+                                    <h5>ConsenSys</h5>
+                                    <p><u>Best Ethereum Smart Contract/Decentralized App</u></p>
+                                    <p>$500 in Ether</p>
                                 </div>
                             </div>
                         </div>
