Add CS+SG prize

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>1st Place</u></p>
-                                    <p>One GoPro HERO Session per Team Member</p>
+                                    <p>One GoPro HERO Session per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -403,7 +403,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>2nd Place</u></p>
-                                    <p>One Amazon Echo Dot per Team Member</p>
+                                    <p>One Amazon Echo Dot per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -412,7 +412,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>3rd Place</u></p>
-                                    <p>One Mini Quadcopter per Team Member</p>
+                                    <p>One Mini Quadcopter per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Most Innovative Hack</u></p>
-                                    <p>One Smart Notebook per Team Member</p>
+                                    <p>One Smart Notebook per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Best Game</u></p>
-                                    <p>One Logitech Wireless Mouse per Team Member</p>
+                                    <p>One Logitech Wireless Mouse per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Healthiest Hack</u></p>
-                                    <p>One Xiaomi Mi Band 3 per Team Member</p>
+                                    <p>One Xiaomi Mi Band 3 per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -452,7 +452,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Best Hardware Hack</u></p>
-                                    <p>One Arduino Car Starter Kit per Team Member</p>
+                                    <p>One Arduino Car Starter Kit per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -461,7 +461,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Most "Millennial" Hack</u></p>
-                                    <p>One Emoji Plushie per Team Member</p>
+                                    <p>One Emoji Plushie per team member</p>
                                 </div>
                             </div>
                         </div>
@@ -471,6 +471,17 @@
                                     <h5>ConsenSys</h5>
                                     <p><u>Best Ethereum Smart Contract/Decentralized App</u></p>
                                     <p>$500 in Ether</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 offset-l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>UNC-CH CS+Social Good</h5>
+                                    <p><u>Most Innovative Social Impact Hack</u></p>
+                                    <p>One Certificate and Chromecast per team member</p>
                                 </div>
                             </div>
                         </div>
