add beam to sponsors

--- a/index.html
+++ b/index.html
@@ -368,12 +368,20 @@
                     </div>
                     <div class="row sponsor-row">
                         <div class="col m12 l6 center">
-                            <a href='https://cs.unc.edu/'>
-                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/unc-cs.png'></a>
+                            <a href="http://beam.unc.edu/">
+                                <img class='sponsor-image tier-3'
+                               src='static/assets/images/sponsors/unc-beam.png'>
+                            </a>
                         </div>
                         <div class="col m12 l6 center">
                             <a href='https://unc-cssg.org/'>
                                 <img class='sponsor-image tier-3' src='static/assets/images/sponsors/cssgunc.png'></a>
+                        </div>
+                    </div>
+                    <div class='row sponsor-row'>
+                        <div class='col m12 center'>
+                         <a href='https://cs.unc.edu/'>
+                                <img class='sponsor-image tier-3' src='static/assets/images/sponsors/unc-cs.png'></a>
                         </div>
                     </div>
                     <p class="center">Looking to sponsor HackNC? Email us at <a class="sponsor-email"
