--- a/live/index.html
+++ b/live/index.html
@@ -47,26 +47,30 @@
             <div class="nav-wrapper center">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="hide-on-small-only">
-                    <li><a href="../#about">Home</a></li>
-                    <li><a href="../#travel">Travel</a></li>
-                    <li><a href="../#faq">FAQ</a></li>
-                    <li><a href="../#schedule">Schedule</a></li>
-                    <li><a href="../#sponsors">Sponsors</a></li>
-                    <li><a href="../#prizes">Prizes</a></li>
-                    <li><a href="../#contact">Contact</a></li>
+                    <li><a href="/live" class="live-nav-link">Live Dashboard</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/#about">About</a></li>
+                    <li><a href="/#travel">Travel</a></li>
+                    <li><a href="/#faq">FAQ</a></li>
+                    <li><a href="/#schedule">Schedule</a></li>
+                    <li><a href="/#sponsors">Sponsors</a></li>
+                    <li><a href="/#prizes">Prizes</a></li>
+                    <li><a href="/#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
 
         <!-- Mobile Navigation Bar -->
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="../#about">Home</a></li>
-            <li><a href="../#travel">Travel</a></li>
-            <li><a href="../#faq">FAQ</a></li>
-            <li><a href="../#schedule">Schedule</a></li>
-            <li><a href="../#sponsors">Sponsors</a></li>
-            <li><a href="../#prizes">Prizes</a></li>
-            <li><a href="../#contact">Contact</a></li>
+            <li><a href="/live" class="live-nav-link">Live Dashboard</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/#about">About</a></li>
+            <li><a href="/#travel">Travel</a></li>
+            <li><a href="/#faq">FAQ</a></li>
+            <li><a href="/#schedule">Schedule</a></li>
+            <li><a href="/#sponsors">Sponsors</a></li>
+            <li><a href="/#prizes">Prizes</a></li>
+            <li><a href="/#contact">Contact</a></li>
         </ul>
         
         <div class='container' class='live-content'>
@@ -80,6 +84,9 @@
                             <p>Join one of the following and turn on notifications for updates</p>
                         </div>
                         <div class="card-action">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8tbW84SsjsQ8ycAURBzcvrEbA6ZXT6rmqSZhoXuiAobIfXA/viewform?usp=sf_link"
+                                class="waves-effect wave-light btn">
+                                SMS</a>
                             <a href="https://join.slack.com/t/hacknc2018/shared_invite/enQtNDM2ODQwNTQzMTQxLTViOWU2MWQ0MzdhN2YxN2M3MzUyOGJmZjM2ZDA4ZGU4ZjNmM2VkZmY0NTJhMjk5OTk0Y2Q4NGM3ZTEwMjkxMWQ"
                                 class="waves-effect wave-light btn">
                                 Slack</a>
@@ -127,8 +134,8 @@
                             <p>To recieve reimbursement, you must have: (1) Registered in advance, (2) Kept receipts, (3) Traveled more than 50 miles from school, and (4) Must have submitted a project. Fill out the below form to begin the process:</p>
                         </div>
                         <div class="card-action">
-                            <a href='#' 
-                                class="waves-effect wave-light btn">Coming Soon</a>
+                            <a href='https://hacknc.typeform.com/to/VEoFv1' 
+                                class="waves-effect wave-light btn">Reimbursement Form</a>
                         </div>
                     </div>
                     <div class='card'>
