Update Makerspace info and form

--- a/live/index.html
+++ b/live/index.html
@@ -121,7 +121,7 @@
                     <div class='card'>
                         <div class="card-content black-text">
                             <span class="card-title">Prizes & Submissions <i class="fa fa-trophy"></i></span>
-                            <p>Submission process! Go to devpost and create a new hack. Make sure to (1) note what prizes you are applying for and (2) get all your teammates added as contributors on the project. Demos will begin at 9:00AM and judges will come to your table to see your hack. Keep devpost simple!</p>
+                            <p>Submission process! Go to devpost and create a new hack. Make sure to (1) note what prizes you are applying for and (2) get all your teammates added as contributors on the project. Demos will begin at 11:30AM and judges will come to your table to see your hack. Keep devpost simple!</p>
                         </div>
                         <div class="card-action">
                             <a href='https://hacknc2018.devpost.com/' 
@@ -139,10 +139,15 @@
                         </div>
                     </div>
                     <div class='card'>
-                            <div class="card-content black-text">
+                        <div class="card-content black-text">
                             <span class="card-title">Hardware Lab <i class="fa fa-laptop"></i></span>
-                            <p>We have hardware! If you want to borrow something, head on over to the Hardware desk.</p>
+                            <p>We have hardware! If you want to borrow something, head on over to the Hardware desk. If you'd like to use a laser cutter or 3D printer from the UNC Makerspace, hit the button below!</p>
                             <p><b>Location: Murray Ground Floor</b></p>
+                            <img class="beam-logo" src="/static/assets/images/sponsors/unc-beam.png">
+                        </div>
+                        <div class="card-action">
+                            <a href='https://goo.gl/forms/vcIDUL7ssGZQNwph1' 
+                                class="waves-effect wave-light btn">Laser Cutter and 3D Printer Sign-up</a>
                         </div>
                     </div>
                     <div class='card'>
