--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <nav class='nfixed'>
             <div class="nav-wrapper center">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="hide-on-small-only">
+                <ul class="hide-on-med-and-down">
                     <li><a href="#about">Home</a></li>
                     <li><a href="#travel">Travel</a></li>
                     <li><a href="#faq">FAQ</a></li>
