--- a/index.html
+++ b/index.html
@@ -67,21 +67,7 @@
             <div class="section dark center">
                 <img class="logo" src="static/assets/images/CarnivalBannerHanging.png">
                 <h4 class="fall2018" class="center">October 6-7, 2018</h4>
-                <div class='hide-on-small-only'>
-                    <a class='btn-large modal-trigger form-btn'
-                         href="#volunteer-mentor">Volunteer!</a>
-                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a>
-                    <a class='btn-large form-btn modal-trigger'
-                        href="#sponsor-btn">Sponsor Us!</a>
-                </div>
-                <div class="hide-on-med-and-up">
-                    <a class='btn-large form-btn' href="https://hacknc.typeform.com/to/vum1rA">Register Now!</a><br>
-                    <a class='btn-large modal-trigger form-btn'
-                        href="#volunteer-mentor">Volunteer!</a><br>
-                    <a class='btn-large form-btn modal-trigger'
-                        href="#sponsor-btn">Sponsor Us!</a>
-
-                </div>
+                <a class='btn-large form-btn' href="/live">Live Dashboard</a>
             </div>
         </div>
 
@@ -90,7 +76,9 @@
             <div class="nav-wrapper center">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="hide-on-med-and-down">
-                    <li><a href="#about">Home</a></li>
+                    <li><a href="/live" class="live-nav-link">Live Dashboard</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#travel">Travel</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#schedule">Schedule</a></li>
@@ -103,7 +91,9 @@
 
         <!-- Mobile Navigation Bar -->
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="#about">Home</a></li>
+            <li><a href="/live" class="live-nav-link">Live Dashboard</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#travel">Travel</a></li>
             <li><a href="#faq">FAQ</a></li>
             <li><a href="#schedule">Schedule</a></li>
