--- a/live/index.html
+++ b/live/index.html
@@ -110,6 +110,16 @@
                     </div>
                     <div class='card'>
                         <div class="card-content black-text">
+                            <span class="card-title">Watch our livestream!</i></span>
+                            <p>Can't make it to the opening ceremony? Watch it live at the link below!</p>
+                        </div>
+                        <div class="card-action">
+                            <a href='https://www.youtube.com/watch?v=gHbVjDwDVRQ' 
+                                class="waves-effect wave-light btn">Click here to watch</a>
+                        </div>
+                    </div>
+                    <div class='card'>
+                        <div class="card-content black-text">
                             <span class="card-title">WiFi Access <i class="fa fa-wifi"></i></span>
                             <p>To access WiFi, you need to join one of the falling</p>
                             <table class="table wifi-table">
