--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>1st Place</u></p>
-                                    <p>One GoPro HERO Session per team member</p>
+                                    <p>GoPro HERO Sessions</p>
                                 </div>
                             </div>
                         </div>
@@ -401,7 +401,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>2nd Place</u></p>
-                                    <p>One Amazon Echo Dot per team member</p>
+                                    <p>Mini Quadcopters</p>
                                 </div>
                             </div>
                         </div>
@@ -410,7 +410,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>3rd Place</u></p>
-                                    <p>One Mini Quadcopter per team member</p>
+                                    <p>Amazon Echo Dots</p>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Most Innovative Hack</u></p>
-                                    <p>One Smart Notebook per team member</p>
+                                    <p>Smart Notebooks</p>
                                 </div>
                             </div>
                         </div>
@@ -430,7 +430,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Best Game</u></p>
-                                    <p>One Logitech Wireless Mouse per team member</p>
+                                    <p>Logitech Wireless Mice</p>
                                 </div>
                             </div>
                         </div>
@@ -439,7 +439,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Healthiest Hack</u></p>
-                                    <p>One Xiaomi Mi Band 3 per team member</p>
+                                    <p>Xiaomi Mi Band 3s</p>
                                 </div>
                             </div>
                         </div>
@@ -450,7 +450,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Best Hardware Hack</u></p>
-                                    <p>One Arduino Car Starter Kit per team member</p>
+                                    <p>Arduino Car Starter Kits</p>
                                 </div>
                             </div>
                         </div>
@@ -459,7 +459,7 @@
                                 <div class='card-content'>
                                     <h5>HackNC</h5>
                                     <p><u>Most "Millennial" Hack</u></p>
-                                    <p>One Emoji Plushie per team member</p>
+                                    <p>Emoji Plushies</p>
                                 </div>
                             </div>
                         </div>
@@ -474,12 +474,99 @@
                         </div>
                     </div>
                     <div class='row'>
-                        <div class='col m12 l4 offset-l4 center'>
+                        <div class='col m12 l4 offset center'>
                             <div class='card dark'>
                                 <div class='card-content'>
                                     <h5>UNC-CH CS+Social Good</h5>
                                     <p><u>Most Innovative Social Impact Hack</u></p>
-                                    <p>One Certificate and Chromecast per team member</p>
+                                    <p>Certificates and Chromecasts</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of Algolia</u></p>
+                                    <p>Casio Calculator Watches</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best IoT Hack using a Qualcomm Device</u></p>
+                                    <p>Dragonboard 410Cs</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of Authorize.net</u></p>
+                                    <p>LS20 Gaming Headsets</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of Google Cloud Platform</u></p>
+                                    <p>Google Home Minis</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best Domain Registered with Domain.com</u></p>
+                                    <p>Raspberry Pis</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of HERE.com</u></p>
+                                    <p>Hacker gear from HERE.com</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of the Cisco Webex Teams API</u></p>
+                                    <p>Power Banks</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Snap Kit Weekly Challenge</u></p>
+                                    <p>Spectacles by Snapchat</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='col m12 l4 center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>MLH</h5>
+                                    <p><u>Best use of Clarifai's API</u></p>
+                                    <p>Hacker gear from Clarifai</p>
                                 </div>
                             </div>
                         </div>
