--- a/live/index.html
+++ b/live/index.html
@@ -171,6 +171,18 @@
                     </div>
                     <div class='card'>
                         <div class="card-content black-text">
+                            <span class="card-title">MLH Prize Resources</i></span>
+                            <p>Here are the resources needed to compete for MLH sponsored prizes</p>
+                            <p><a href="Hackp.ac/github">Github Education</a></p>
+                            <p><a href="Havkp.ac/domain">Domain.com</a></p>
+                            <p><a href="Hackp.ac/gcp">Google Cloud Platform</a></p>
+                            <p><a href="Hackp.ac/snapkit">Snap Kit</a></p>
+                            <p><a href="Hackp.ac/algoria">Algoria</a></p>
+                            <p><a href="Authorize.net">Authorize.net</a></p>
+                        </div>
+                    </div>
+                    <div class='card'>
+                        <div class="card-content black-text">
                             <span class="card-title">Mentors <i class="fa fa-users"></i></span>
                             <p>Need help with your hack? Stuck? Need ideas? Talk to a mentor! This year, HackNC is using HelpQ.</p>
                         </div>
