Change youtube link

--- a/live/index.html
+++ b/live/index.html
@@ -111,11 +111,11 @@
                     <div class='card'>
                         <div class="card-content black-text">
                             <span class="card-title">Watch our livestream!</i></span>
-                            <p>Can't make it to the opening ceremony? Watch it live at the link below!</p>
+                            <p>Can't make it to a workshop? Watch them live at the link below!</p>
                         </div>
                         <div class="card-action">
-                            <a href='https://www.youtube.com/watch?v=gHbVjDwDVRQ' 
-                                class="waves-effect wave-light btn">Click here to watch</a>
+                            <a href='https://www.youtube.com/channel/UCDRN6TMC27uSDsZosIwUrZg' 
+                                class="waves-effect wave-light btn">Our Youtube Channel</a>
                         </div>
                     </div>
                     <div class='card'>
