--- a/index.html
+++ b/index.html
@@ -570,6 +570,15 @@
                                 </div>
                             </div>
                         </div>
+                        <div class='col m12 l4 offset center'>
+                            <div class='card dark'>
+                                <div class='card-content'>
+                                    <h5>Capital One</h5>
+                                    <p><u>Best Financial Hack</u></p>
+                                    <p>$250 Amazon Gift Card per team member</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
