--- a/live/index.html
+++ b/live/index.html
@@ -173,12 +173,12 @@
                         <div class="card-content black-text">
                             <span class="card-title">MLH Prize Resources</i></span>
                             <p>Here are the resources needed to compete for MLH sponsored prizes</p>
-                            <p><a href="Hackp.ac/github">Github Education</a></p>
-                            <p><a href="Havkp.ac/domain">Domain.com</a></p>
-                            <p><a href="Hackp.ac/gcp">Google Cloud Platform</a></p>
-                            <p><a href="Hackp.ac/snapkit">Snap Kit</a></p>
-                            <p><a href="Hackp.ac/algoria">Algoria</a></p>
-                            <p><a href="Authorize.net">Authorize.net</a></p>
+                            <p><a href="https://Hackp.ac/github">Github Education</a></p>
+                            <p><a href="https://Havkp.ac/domain">Domain.com</a></p>
+                            <p><a href="https://Hackp.ac/gcp">Google Cloud Platform</a></p>
+                            <p><a href="https://Hackp.ac/snapkit">Snap Kit</a></p>
+                            <p><a href="https://Hackp.ac/algoria">Algoria</a></p>
+                            <p><a href="https://www.authorize.net">Authorize.net</a></p>
                         </div>
                     </div>
                     <div class='card'>
