Fix resource domain.com link

--- a/live/index.html
+++ b/live/index.html
@@ -174,7 +174,7 @@
                             <span class="card-title">MLH Prize Resources</i></span>
                             <p>Here are the resources needed to compete for MLH sponsored prizes</p>
                             <p><a href="https://Hackp.ac/github">Github Education</a></p>
-                            <p><a href="https://Havkp.ac/domain">Domain.com</a></p>
+                            <p><a href="https://Hackp.ac/domain">Domain.com</a></p>
                             <p><a href="https://Hackp.ac/gcp">Google Cloud Platform</a></p>
                             <p><a href="https://Hackp.ac/snapkit">Snap Kit</a></p>
                             <p><a href="https://Hackp.ac/algoria">Algoria</a></p>
